Fix list margin and text margin on mobile

--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -34,6 +34,8 @@ a
 // lists
 ul
   list-style-type: square
+  li
+    margin: .2rem 0
 
 blockquote
   margin: 1.5rem 0
