--- a/sass/main.sass
+++ b/sass/main.sass
@@ -15,7 +15,7 @@ body
   position: relative
   @media screen and (max-width: $singleColWidth)
     max-width: 54rem
-    margin: 1rem auto
+    margin: 3rem auto
     padding: 0 1rem
 
 #search 
